Fixed hamburger menu in dark mode.

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     transition: .6s ease-in-out;
@@ -9,6 +10,10 @@ html, body {
     max-width: 100vw;
     min-height: 100vh;
     background-color: #f5f5f7;
+}
+
+main {
+  min-height: 100vh;
 }
 
 
@@ -236,6 +241,11 @@ code {
     font-size: smaller;
 }
 
+code.dark {
+  background-color: #372236;
+  color: #f5f5f7 !important;
+}
+
 
 /* Window box syling. DON'T EDIT */
 
@@ -254,7 +264,8 @@ code {
 }
 
 .app-window.dark {
-  background-color: #492c47;
+  background-color: #372236;
+  
 }
 
 .window-header {
@@ -293,6 +304,9 @@ code {
 
 .window-content {
     padding: 20px;
+
+    font-family: 'Courier New', Courier, monospace;
+    color: #f5f5f7;
 }
 
 
@@ -498,6 +512,13 @@ input:checked + .slider:before {
   cursor: pointer;
   z-index: 999;
 }
+
+.menu__btn {
+  background-color: rgba(0,0,0,0);
+}
+
+
+
 .menu__btn > span,
 .menu__btn > span::before,
 .menu__btn > span::after {
@@ -517,6 +538,14 @@ input:checked + .slider:before {
   content: '';
   top: 8px;
 }
+
+.menu__btn.dark > span,
+.menu__btn.dark > span::before,
+.menu__btn.dark > span::after {
+  background-color: #f5f5f7;
+}
+
+
 .menu__box {
   display: block;
   position: fixed;
@@ -532,6 +561,11 @@ input:checked + .slider:before {
   transition-duration: .25s;
   z-index: 998;
 }
+
+.menu__box.dark {
+  background-color: #503851;
+}
+
 .menu__item {
   display: block;
   padding: 12px 24px;
@@ -541,9 +575,21 @@ input:checked + .slider:before {
   text-decoration: none;
   transition-duration: .25s;
 }
+
+.menu__item.dark {
+  background-color: #503851;
+  color: #f5f5f7;
+}
+
 .menu__item:hover {
   background-color: #cfdcd6;
 }
+
+.menu__item.dark:hover {
+  background-color: #404040;
+}
+
+
 
 
 
